--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-//各種パズルを解いて、コーディング力を上げていこう
-//テストコード・テストデータがあるとReviseしやすくていいね！
+//11期企画用リポジトリ
+//まずはtwitter作成？
 
 //参考サイトリスト
-//オフラインリアルタイムどう書くシリーズ
-//http://atnd.org/events/40389
+//
+//
