--- a/README
+++ b/README
@@ -1,6 +1,7 @@
-//11期企画用リポジトリ
-//まずはtwitter作成？
+//いろいろなパズルを解くリポジトリ
 
 //参考サイトリスト
+//オフラインリアルタイムどう書く(これは第12回)
+//http://atnd.org/events/40389
 //
 //
